force-app/main/default/objects/clofor_com_cfs__ACBalIS__c/fields/clofor_com_cfs__ACBalID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ACBalID__c</fullName>
    <label>A/C BAL ID</label>
    <referenceTo>clofor_com_cfs__ACBalance__c</referenceTo>
    <relationshipLabel>A/C BAL+I/S(P/L)</relationshipLabel>
    <relationshipName>ACBalIS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>