force-app/main/default/objects/clofor_com_cfs__ACBalIS__c/fields/clofor_com_cfs__ISID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ISID__c</fullName>
    <label>I/S(P/L) ID</label>
    <referenceTo>clofor_com_cfs__IncomeStatement__c</referenceTo>
    <relationshipLabel>A/C BAL+I/S(P/L)</relationshipLabel>
    <relationshipName>ACBalISID</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>