force-app/main/default/objects/clofor_com_cfs__ACBalIS__c/fields/clofor_com_cfs__TranBalDebitIS__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TranBalDebitIS__c</fullName>
    <label>TRANSACTION BAL-DEBIT-I/S</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>